# KYOTA

./: .gitignore  AGENTS.md  README.md  handoff_from_antigravity.md  pyproject.toml  setup.py  snapshot_report.html
fidesz-sapka-archive/: package-lock.json  package.json
fidesz-sapka-site/: .gitignore  AGENTS.md  CLAUDE.md  DESIGN_DIRECTION.md  astro.config.mjs  netlify.toml  package-lock.json  package.json
kyota-wiki/: CLAUDE.md  CODEX.md  NOW.md  index.md  log.md
kyota-wiki/entities/: ai_creator_website_prompting.md  ai_creator_website_tools_and_stack.md  autonomous_verification_loops.md  claude_context_rules.md  codex_memory_core.md  context_degradation_safeguards.md  creative_selection.md  creator_web_design_canon.md  creator_web_reference_set.md  design_form_chaos.md  execution_patterns.md  formal_verification_tool_use.md  grid_systems.md  hierarchical_memory_rules.md  index.md  ingestion_workflow.md  intent_routing_architecture.md  jit_tool_loading.md  materiality_and_dematerialization.md  multi_agent_coordination.md  openai_chatgpt_codex_operating_notes.md  operator_profile.md  persona_orchestrator_specialist.md  premium_dx_philosophies.md  progressive_disclosure_ui.md  recursive_criticize_improve.md  rollout_fs003_campaign_plan.md  rollout_hidden_hand.md  rollout_historical_artifact.md  rollout_moral_economy.md  rollout_narrative_labor.md  shaughnessy_graphic_designer.md  specialist_playbook.md  spl_declarative_context.md  superpowers_operating_notes.md  tui_architecture_and_animation.md  (+7 more)
tests/: test_actions.py  test_cli.py  test_core.py  test_tui.py
(+64 files in other folders)
