[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kyota-cli"
version = "0.1.0"
description = "Local-first coordination CLI for the KYOTA workspace."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "KYOTA" }
]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8.0", "textual>=8.2.0", "pytest-textual-snapshot>=1.1.0"]
tui = ["textual>=8.2.0"]

[project.scripts]
kyota = "kyota.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
kyota = ["*.css"]
